test performance search